--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "start": "serve -s dist -l 5173"
+    "start": "serve -s dist -l 5173",
+    "docker-build": "docker build -t vue-banking .",
+    "docker-run": "docker run -it -p 5173:80 --rm --name vue-banking vue-banking"
   },
   "dependencies": {
     "chart.js": "^4.2.1",
